<resources>
    <string name="app_name">Mr.TA</string>
    <string name="subtitle">Sổ lưu trữ hồ sơ bệnh án</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="edt_hint_patient_brief_id">Mã số hồ sơ</string>
    <string name="message_login_success">Xin chào</string>
    <string name="message_login_failed">Đăng nhập thất bại</string>
    <string name="txt_home">Trang chủ</string>
    <string name="txt_tab_treatment_history">Lần khám</string>
    <string name="txt_tab_prescription">Toa thuốc</string>
    <string name="txt_tab_meeting">Lịch hẹn</string>
    <string name="txt_name">Họ tên:</string>
    <string name="txt_gender">Giới tính:</string>
    <string name="txt_address">Địa chỉ:</string>
    <string name="txt_phone">Điện thoại:</string>
    <string name="confirm_exit_app_content">Bạn muốn thoát ứng dụng?</string>
    <string name="confirm_logout_app_content">Bạn có chắc muốn đăng xuất?</string>
    <string name="message_yes">Có</string>
    <string name="message_no">Không</string>
    <string name="txt_item_sympton">Triệu chứng</string>
    <string name="txt_item_treatment_content">Nội dung điều trị</string>
    <string name="txt_item_status">Tình trạng khám</string>
    <string name="txt_item_doctor">Người khám</string>
    <string name="txt_item_cost">Chi phí khám</string>
    <string name="txt_item_details">Thông tin chi tiết</string>
    <string name="txt_data_fake">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="txt_date_fake">05/03/2017</string>
    <string name="txt_item_more">Thông tin chi tiết</string>
    <string name="txt_last_treatment_time">Ngày khám:</string>
    <string name="txt_get_older_treatment_time">Xem các lần khám cũ hơn >></string>
    <string name="toolbar_title_history_treatment">Lịch sử các lần khám</string>
    <string name="txt_treatment_time_date_title">Lần khám ngày:</string>
    <string name="txt_treatment_time_doctor_title">Bác sĩ khám:</string>
    <string name="txt_details_treatment_title">Lần khám:</string>
    <string name="txt_details_treatment_time_title">Lần khám:</string>
    <string name="txt_details_treatment_date_title">Ngày khám:</string>
    <string name="txt_details_treatment_content_title">Nội dung điều trị:</string>
    <string name="txt_details_treatment_cost_title">Chi phí khám:</string>
    <string name="txt_details_treatment_note_title">Ghi chú:</string>
    <string name="txt_details_treatment_status_title">Tình trạng</string>
    <string name="toolbar_title_details_treatment">Chi tiết lần khám</string>
    <string name="txt_details_treatment_cardiovascular_title">Mạch</string>
    <string name="txt_details_treatment_temperature_title">Thân nhiệt</string>
    <string name="txt_details_treatment_blood_pressure_title">Huyết áp</string>
    <string name="txt_details_treatment_breathing_rate_title">Nhịp thở</string>
    <string name="txt_details_treatment_weight_title">Cân nặng</string>
    <string name="txt_details_treatment_height_title">Chiều cao</string>
    <string name="txt_details_treatment_bmi_title">BMI</string>
    <string name="txt_details_treatment_cancel_title">Hủy khám:</string>
    <string name="txt_details_treatment_clinical_approach_title">Cận lâm sàng</string>
    <string name="txt_details_treatment_office_title">Chức vụ:</string>
    <string name="txt_details_treatment_sympton_title">Triệu chứng:</string>
    <string name="txt_details_treatment_doctor_title">Bác sĩ khám:</string>
    <string name="txt_prescription_patient_name_title">Bệnh nhân:</string>
    <string name="txt_prescription_patient_address_title">Địa chỉ:</string>
    <string name="txt_prescription_patient_gender_title">Phái:</string>
    <string name="txt_prescription_treatment_time_title">Lần khám:</string>
    <string name="txt_prescription_patient_phone_title">Điện thoại:</string>
    <string name="txt_prescription_treatment_date_title">Ngày khám:</string>
    <string name="txt_prescription_detail_title">CHI TIẾT TOA THUỐC</string>
    <string name="txt_drug_note_title">Ghi chú:</string>
    <string name="txt_drug_morning_title">Sáng:</string>
    <string name="txt_drug_afternoon_title">Chiều:</string>
    <string name="txt_drug_noon_title">Trưa:</string>
    <string name="txt_drug_evening_title">Tối:</string>
    <string name="txt_prescription_doctor_title">Bác sĩ khám:</string>
    <string name="txt_prescription_note_general_title">Lời dặn:</string>
    <string name="txt_prescription_get_more_prescriptions_title">Xem toa thuốc của các lần khám khác >></string>
    <string name="txt_reminder_meetings_calendar">LỊCH HẸN</string>
    <string name="txt_reminder_meetings_event_title">Không có lịch hẹn nào</string>
    <string name="message_add_event_success">Đặt lịch hẹn thành công</string>
    <string name="message_no_event">Không có lịch hẹn nào</string>
    <string name="toolbar_title_history_prescription">Lịch sử các toa thuốc</string>
    <string name="toolbar_title_details_prescription">Chi tiết toa thuốc</string>
    <string name="txt_reminder_event_name_hint">Sự kiện</string>
    <string name="btn_reminder_event_cancel">Hủy bỏ</string>
    <string name="btn_reminder_event_ok">Đồng ý</string>
    <string name="txt_reminder_event_time_begin_title">Thời gian bắt đầu</string>
    <string name="txt_reminder_event_time_end_title">Thời gian kết thúc</string>
    <string name="txt_reminder_event_detail_title">Chi tiết lịch hẹn</string>
    <string name="confirm_delete_event">Bạn có muốn xóa sự kiện này không?</string>
    <string name="txt_reminder_event_add_retreatment">Lịch tái khám</string>
    <string name="txt_reminder_event_add_drug_reminder">Lịch uống thuốc</string>
    <string name="txt_reminder_drug_hint_title">Ghi chú (bắt buộc)</string>
    <string name="txt_reminder_drug_hint_description">Mô tả (không bắt buộc)</string>
    <string name="error_title_min_characters">Tối thiểu 3 ký tự</string>
    <string name="btn_reminder_event_more_options">Thêm tùy chọn</string>
    <string name="txt_reminder_event_more_options_reminder_title">Nhắc nhở</string>
    <string name="txt_reminder_event_more_options_repeat_title">Lặp lại</string>
    <string name="menu_item_reminder_time_no_remind">Không nhắc nhở</string>
    <string name="menu_item_reminder_time_before_0_minute">Đúng giờ</string>
    <string name="menu_item_reminder_time_before_5_minutes">Trước 5 phút</string>
    <string name="menu_item_reminder_time_before_10_minutes">Trước 10 phút</string>
    <string name="menu_item_reminder_time_before_15_minutes">Trước 15 phút</string>
    <string name="menu_item_reminder_time_before_30_minutes">Trước 30 phút</string>
    <string name="menu_item_reminder_time_before_1_hour">Trước 1 giờ</string>
    <string name="menu_item_reminder_time_before_1_day">Trước 1 ngày</string>
    <string name="menu_item_reminder_time_before_2_days">Trước 2 ngày</string>
    <string name="menu_item_reminder_time_before_1_week">Trước 1 tuần</string>
    <string name="menu_item_reminder_repeat_1_time">Một lần</string>
    <string name="menu_item_reminder_repeat_daily">Hàng ngày</string>
    <string name="menu_item_reminder_repeat_weekly">Hàng tuần</string>
    <string name="menu_item_reminder_repeat_monthly">Hàng tháng</string>
    <string name="menu_item_reminder_repeat_yearly">Hằng năm</string>
    <string name="menu_item_reminder_repeat_custom">Tùy chỉnh</string>
    <string name="message_title_notify_event_retreatment">SKB - Lịch tái khám</string>
    <string name="message_have_a_notification_of_retreatment">Bạn có thông báo</string>
    <string name="txt_reminder_event_have_no_event">Không có lịch hẹn nào</string>
    <string name="txt_title_screen_last_treatment">Lần khám gần nhất</string>
    <string name="txt_title_screen_last_prescription">Toa thuốc gần nhất</string>
    <string name="txt_title_screen_retreatment_reminder">Lịch hẹn tái khám</string>
    <string name="txt_dashboard_drug_list_today">Thuốc hôm nay</string>
    <string name="txt_dashboard_event_list_today">Lịch hẹn hôm nay</string>
    <string name="txt_prescription_valid_time">Toa này chỉ có giá trị 1 lần khám\nKhông sử dụng toa này cho người khác</string>
    <string name="txt_dashboard_morning_title">Buổi sáng (6:30 &#8211; 10:30 )</string>
    <string name="txt_dashboard_noon_title">Buổi trưa (11:00 &#8211; 14:00) </string>
    <string name="txt_dashboard_afternoon_title">Buổi chiều (14:30 &#8211; 18:00)</string>
    <string name="txt_dashboard_evening_title">Buổi tối (18:30 &#8211; 21:30)</string>
    <string name="txt_birthday">Ngày sinh:</string>
    <string name="txt_reminder_event_date_selected">Đặt lịch cho ngày</string>
    <string name="txt_today_title">Hôm nay ngày</string>
    <string name="message_cancel">Hủy</string>
    <string name="message_canceled">Đã hủy</string>
    <string name="message_agree">Đồng ý</string>
    <string name="message_cannot_set_event_for_the_date_in_the_past">Không thể đặt lịch hẹn cho ngày trong quá khứ</string>
    <string name="message_no_title">(Không có tiêu đề)</string>
    <string name="message_no_notification_today">Hôm nay bạn không có lịch hẹn nào</string>
    <string name="txt_reminder_event_today_title">Lịch hẹn hôm nay</string>
    <string name="txt_event_status_pending">Sắp diễn ra</string>
    <string name="txt_event_status_happened">Kết thúc</string>
    <string name="btn_scan_barcode_to_login">Quét mã vạch để đăng nhập</string>
    <string name="txt_or">Hoặc</string>
    <string name="txt_dashboard_drug_list_nearest">Thuốc uống theo toa mới nhất</string>
    <string name="message_view_detail_prescription">Xem chi tiết toa thuốc</string>
    <string name="message_view_detail_treatment">Xem chi tiết lần khám</string>
    <string name="txt_title_screen_dashboard">Trang chủ</string>
    <string name="txt_tab_dashboard">Trang chủ</string>
    <string name="txt_overview">Tổng quan</string>
    <string name="txt_event_status_happening">Đang diễn ra</string>
    <string name="btn_open_in_calendar">Mở trong ứng dụng Lịch</string>
    <string name="txt_open_in_calendar_app">Mở trong ứng dụng Lịch</string>
    <string name="remind_drink_drug">Nhắc nhở uống thuốc</string>
    <string name="drink_drug_morning">Uống thuốc buổi sáng</string>
    <string name="drink_drug_noon">Uống thuốc buổi trưa</string>
    <string name="drink_drug_afternoon">Uống thuốc buổi chiều</string>
    <string name="drink_drug_evening">Uống thuốc buổi tối</string>
    <string name="slide_1_title">Chào bạn!</string>
    <string name="slide_1_desc">Rất vui được đồng hành cùng bạn!</string>
    <string name="slide_2_title">Khám bệnh</string>
    <string name="slide_2_desc">Lưu trữ thông tin các lần khám bệnh!</string>
    <string name="slide_3_title">Toa thuốc</string>
    <string name="slide_3_desc">Lưu trữ các toa thuốc giúp bạn!</string>
    <string name="slide_4_title">Thông báo</string>
    <string name="slide_4_desc">Tôi sẽ nhắc bạn lịch hẹn tái khám và uống thuốc!</string>
    <string name="full_name">Họ và tên&#8230;</string>
    <string name="patient_address">Địa chỉ&#8230;</string>
    <string name="diagnose">Chẩn đoán&#8230;</string>
    <string name="note">Ghi chú&#8230;</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="add_profile_detail">Nhập thông tin bệnh nhân</string>
    <string name="gender">Giới tính&#8230;</string>
    <string name="age">Tuổi&#8230;</string>
    <string name="txt_age">Tuổi:</string>
    <string name="txt_diagnose">Chẩn đoán:</string>
    <string name="txt_note">Ghi chú:</string>
</resources>