<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/bg_auth_white" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#13000" />-->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_mrta_for_doctor_no_text" />

    <vn.taa.mrta.custom.TextViewCSE
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/subtitle"
        android:textColor="@color/colorBlueSuperDark"
        app:cse_typeface_textview="@string/font_thonburi_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_patient_brief_id"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_edittext"
                android:cursorVisible="false"
                android:gravity="center"
                android:hint="@string/edt_hint_patient_brief_id"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/colorBlueSuperDark"
                android:textColorHint="@color/colorBlueSuperDark" />

            <vn.taa.mrta.custom.ButtonCSE
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cse_typeface_button="@string/font_opensans_light" />

            <vn.taa.mrta.custom.TextViewCSE
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_or"
                android:textColor="@color/colorBlueSuperDark" />

            <vn.taa.mrta.custom.ButtonCSE
                android:id="@+id/btn_scan_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_scan_blue"
                android:text="@string/btn_scan_barcode_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorBlueSuperDark" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
